<resources>
    <string name="app_name">Furniture Finder</string>
    <string name="title">title</string>
    <string name="title_activity_maps">BlankMap</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_manage_single_item">ManageSingleItem</string>
    <string name="bt_photo">Edit Photo</string>
    <string name="bt_text">Edit Info</string>
    <string name="bt_remove">Remove</string>
    <string name="bt_title">Edit Title</string>
    <string name="bt_back">Save &amp; Back</string>
    <string name="bt_yes">Yes</string>
    <string name="bt_no">No</string>
    <string name="description">Description</string>
    <string name="add_new">Add New</string>
</resources>
