<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photo"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/stock_chair" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:id="@+id/text"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/photo"
        android:layout_alignBottom="@+id/photo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_photo"
        android:id="@+id/button_photo"
        android:onClick="changeImage"
        android:layout_marginLeft="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_text"
        android:id="@+id/button_text"
        android:layout_above="@+id/button_remove"
        android:layout_alignEnd="@+id/text"
        android:layout_marginRight="50dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_title"
        android:id="@+id/button_title"
        android:layout_alignTop="@+id/button_remove"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_remove"
        android:id="@+id/button_remove"
        android:onClick="remove"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_photo"
        android:layout_alignStart="@+id/button_text" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_back"
        android:id="@+id/button_back"
        android:layout_below="@+id/button_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>